--- a/components/player-form/player-form.html
+++ b/components/player-form/player-form.html
@@ -1,6 +1,6 @@
 <!--Make sure the form has the autocomplete function switched off:-->
 <form autocomplete="off" action="/action_page.php">
-    <div class="autocomplete" style="width:300px;">
+    <div style="width:300px;">
       <input id="myInput" type="text" name="myCountry" placeholder="Country">
     </div>
     <input type="submit">
