--- a/components/login/login.html
+++ b/components/login/login.html
@@ -1,25 +1,25 @@
-<div class="container">
+<div class="login-container">
     <form action="/action_page.php">
-        <div class="row">
+        <div class="login-login-row">
             <h2 style="text-align:center">Login with Social Media or Manually</h2>
-            <div class="vl">
-                <span class="vl-innertext">or</span>
+            <div class="login-vl">
+                <span class="login-vl-innertext">or</span>
             </div>
 
-            <div class="col">
-                <a href="#" class="fb btn">
-                    <i class="fa fa-facebook fa-fw"></i> Login with Facebook
+            <div class="login-col">
+                <a href="#" class="login-fb login-btn">
+                    <i class="login-fa fa-facebook fa-fw"></i> Login with Facebook
                 </a>
-                <a href="#" class="twitter btn">
-                    <i class="fa fa-twitter fa-fw"></i> Login with Twitter
+                <a href="#" class="login-twitter login-btn">
+                    <i class="login-fa fa-twitter fa-fw"></i> Login with Twitter
                 </a>
-                <a href="#" class="google btn">
-                    <i class="fa fa-google fa-fw"></i> Login with Google+
+                <a href="#" class="login-google login-btn">
+                    <i class="login-fa fa-google fa-fw"></i> Login with Google+
                 </a>
             </div>
 
-            <div class="col">
-                <div class="hide-md-lg">
+            <div class="login-col">
+                <div class="login-hide-md-lg">
                     <p>Or sign in manually:</p>
                 </div>
 
@@ -32,12 +32,12 @@
     </form>
 </div>
 
-<div class="bottom-container">
-    <div class="row">
-        <div class="col">
-            <a href="#" style="color:white" class="btn">Sign up</a>
+<div class="login-bottom-container">
+    <div class="login-row">
+        <div class="login-col">
+            <a href="#" style="color:white" class="login-btn">Sign up</a>
         </div>
-        <div class="col">
+        <div class="login-col">
             <a href="#" style="color:white" class="btn">Forgot password?</a>
         </div>
     </div>
