--- a/components/player-form/player-form.css
+++ b/components/player-form/player-form.css
@@ -15,7 +15,7 @@ input {
 }
 input[type=text] {
   background-color: #f1f1f1;
-  width: 100%;
+  /* width: 100%; */
 }
 input[type=submit] {
   background-color: DodgerBlue;
