--- a/components/login/login.css
+++ b/components/login/login.css
@@ -1,6 +1,6 @@
-* {box-sizing: border-box}
+/* * {box-sizing: border-box}
 
-/* style the container */
+
 .login-container {
   position: relative;
   border-radius: 5px;
@@ -8,7 +8,7 @@
   padding: 20px 0 30px 0;
 } 
 
-/* style inputs and link buttons */
+
 input,
 .login-btn {
   width: 100%;
@@ -20,7 +20,7 @@ input,
   display: inline-block;
   font-size: 17px;
   line-height: 20px;
-  text-decoration: none; /* remove underline from anchors */
+  text-decoration: none; 
 }
 
 input:hover,
@@ -28,7 +28,7 @@ input:hover,
   opacity: 1;
 }
 
-/* add appropriate colors to fb, twitter and google buttons */
+
 .login-fb {
   background-color: #3B5998;
   color: white;
@@ -44,7 +44,7 @@ input:hover,
   color: white;
 }
 
-/* style the submit button */
+
 input[type=submit] {
   background-color: #4CAF50;
   color: white;
@@ -55,7 +55,6 @@ input[type=submit]:hover {
   background-color: #45a049;
 }
 
-/* Two-column layout */
 .login-col {
   float: left;
   width: 50%;
@@ -64,14 +63,12 @@ input[type=submit]:hover {
   margin-top: 6px;
 }
 
-/* Clear floats after the columns */
 .login-row:after {
   content: "";
   display: table;
   clear: both;
 }
 
-/* vertical line */
 .login-vl {
   position: absolute;
   left: 50%;
@@ -80,7 +77,6 @@ input[type=submit]:hover {
   height: 175px;
 }
 
-/* text inside the vertical line */
 .login-inner {
   position: absolute;
   top: 50%;
@@ -91,31 +87,26 @@ input[type=submit]:hover {
   padding: 8px 10px;
 }
 
-/* hide some text on medium and large screens */
 .login-hide-md-lg {
   display: none;
 }
 
-/* bottom container */
 .login-bottom-container {
   text-align: center;
   background-color: #666;
   border-radius: 0px 0px 4px 4px;
 }
 
-/* Responsive layout - when the screen is less than 650px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 650px) {
   .login-col {
     width: 100%;
     margin-top: 0;
   }
-  /* hide the vertical line */
   .login-vl {
     display: none;
   }
-  /* show the hidden text on small screens */
   .login-hide-md-lg {
     display: block;
     text-align: center;
   }
-}
+} */
