--- a/components/player-form/player-form.css
+++ b/components/player-form/player-form.css
@@ -1,9 +1,8 @@
-* { box-sizing: border-box; }
+/* * { box-sizing: border-box; }
 body {
   font: 16px Arial; 
 }
 .autocomplete {
-  /*the container must be positioned relative:*/
   position: relative;
   display: inline-block;
 }
@@ -15,7 +14,6 @@ input {
 }
 input[type=text] {
   background-color: #f1f1f1;
-  /* width: 100%; */
 }
 input[type=submit] {
   background-color: DodgerBlue;
@@ -27,7 +25,7 @@ input[type=submit] {
   border-bottom: none;
   border-top: none;
   z-index: 99;
-  /*position the autocomplete items to be the same width as the container:*/
+  
   top: 100%;
   left: 0;
   right: 0;
@@ -39,11 +37,9 @@ input[type=submit] {
   border-bottom: 1px solid #d4d4d4; 
 }
 .autocomplete-items div:hover {
-  /*when hovering an item:*/
   background-color: #e9e9e9; 
 }
 .autocomplete-active {
-  /*when navigating through the items using the arrow keys:*/
   background-color: DodgerBlue !important; 
   color: #ffffff; 
-}
+} */
