--- a/components/player-section/player-input/player-input.html
+++ b/components/player-section/player-input/player-input.html
@@ -73,7 +73,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat='player in (viewData.filteredArray = ($ctrl.match.data.included | playerFilter:$ctrl.sortProperty:$ctrl.reversal | filter: $ctrl.filterValue ))'>
+                    <tr ng-repeat='player in (viewData.filteredArray = ($ctrl.match.data.included | playerFilter:$ctrl.sortProperty:$ctrl.reversal | playerNameFilter: $ctrl.filterValue ))'>
 
                         <td>{{$index + 1}}</td>
                         <td>{{player.attributes.stats.name}}</td>
